[package]
name = "phage"
version = "0.1.0"
authors = [ "Risto Saarelma <risto.saarelma@iki.fi>" ]
description = "Roguelike game for 7DRL 2015"
keywords = ["gamedev"]
license = "GPL3"

[[bin]]
name = "phage"

[profile.release]
lto = true

[dependencies.image]

[dependencies.time]

[dependencies.rustc-serialize]

[dependencies.calx]
git = "https://github.com/rsaarelm/calx"

[dependencies.world]
path = "world"
