[package]
name = "calx"
version = "0.2.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
description = "Rust game development helper library collection"
keywords = ["gamedev"]
license = "MIT"

[dependencies.calx_macros]
path = "calx_macros"

[dependencies.calx_ecs]
path = "calx_ecs"

[dependencies]
rand = "0.3"
rustc-serialize = "0.3"
time = "0.1"
num = "0.1"
vec_map = "0.6"
image = "0.10"
nalgebra = "0.2"
glutin = "0.6"
glium = "0.15"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "grid"
path = "examples/grid.rs"

[[example]]
name = "isoworld"
path = "examples/isoworld.rs"
